This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-10-17
 * Added db_class_name option to generate_options, generate_relationship, generate_all_relationships, generate_read, generate_create, generate_delete, and generate_update in Wing::Rest for API migration tasks.

2020-10-16
 * Updated on_create, on_delete, and on_update to each return a reference to the object as their second parameter in wing.vue.js.
 * Removed vestigial self.id from wing.vue.js wing.object. 

2020-10-15
 * Small refinements to wing-pagination columns.

2020-10-12
 * Added percent-from-decimal component to wing.vue.js.

2020-10-09
 * Exposed "scroll_to_id" prop on wing-pagination component. Pagination defaults to scrolling up to "app". If you want something else specify it here.
 * Minor refactoring of ideas system.
 * Converted ideas templates to Vue.
 * Added slot called "above-add-comment" to wing.vue.js <comments> component.

2020-10-08
 * Exposed Wing::Util::commify() to Wing::Template.
 * wing.vue.js markdown-editor component exposes a default slot so you can place content below the editor.

2020-10-05
 * In wing.vue.js added set_fetch_api() on wing.object.

2020-10-01
 * Made the algolia search code a bit more elegant to make it easier to implement their recommended retry strategy.
 * Wing::Algolia has been updated to cycle through 4 different URLs for redundancy.
 * Wing::Rest generate_relationship with named_options "queryable" now does a full wildcard search again.
 * Wrote the documentation for Wing::Util.
 * Added Wing::Role::Result::Trigram and associated utilities to enable fast substring searching in large tables.
 * Fixed: Can't use an undefined value as an ARRAY reference at /data/Wing/lib/Wing/Rest.pm line 158.

2020-09-29